added product average rating
